# claude-slack-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: pyproject.toml
app/claude_slack_bot/: bot.py  claude_runner.py  config.py  main.py  session.py
app/tests/: test_bot.py
scripts/: com.clawdslackbot.plist  run.sh
tests/: test_bot.py  test_claude_runner.py  test_config.py  test_integration.py  test_session.py
